--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "type": "module",
-  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b",
+  "packageManager": "pnpm@10.11.0",
   "scripts": {
     "lint": "eslint"
   },
   "dependencies": {
-    "@whatwg-node/server": "^0.9.49",
+    "@whatwg-node/server": "^0.10.10",
     "itty-router": "^5.0.18",
-    "linkedom": "^0.18.5"
+    "linkedom": "^0.18.10"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.7.2",
-    "eslint": "^9.11.1",
-    "eslint-plugin-format": "^0.1.2"
+    "@antfu/eslint-config": "^4.13.2",
+    "eslint": "^9.27.0",
+    "eslint-plugin-format": "^1.0.1"
   }
 }
