--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@antfu/eslint-config": "^4.13.2",
     "eslint": "^9.27.0",
     "eslint-plugin-format": "^1.0.1",
-    "jiti": "^2.4.2"
+    "jiti": "^2.4.2",
+    "typescript": "^5.8.3"
   }
 }
