Rewrite in Cloudflare Workers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "module": "NodeNext",
-    "strict": true,
-    "skipLibCheck": true
+    "module": "Preserve",
+    "strict": true
   }
 }
