--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
-  "type": "module",
-  "packageManager": "pnpm@10.11.0",
   "scripts": {
-    "lint": "eslint"
+    "build": "node --experimental-strip-types src/build.ts",
+    "dev": "wrangler dev",
+    "types": "wrangler types"
   },
-  "dependencies": {
-    "@whatwg-node/server": "^0.10.10",
-    "itty-router": "^5.0.18",
-    "linkedom": "^0.18.10"
-  },
+  "type": "module",
+  "packageManager": "pnpm@10.17.1+sha512.17c560fca4867ae9473a3899ad84a88334914f379be46d455cbf92e5cf4b39d34985d452d2583baf19967fa76cb5c17bc9e245529d0b98745721aa7200ecaf7a",
   "devDependencies": {
-    "@antfu/eslint-config": "^4.13.2",
-    "eslint": "^9.27.0",
-    "eslint-plugin-format": "^1.0.1",
-    "jiti": "^2.4.2",
-    "typescript": "^5.8.3"
+    "@types/node": "^24.5.2",
+    "typescript": "^5.9.2"
   }
 }
